tighten spacing (stylesheet); have CPM Parser check length before emitting <PRE> tag to prevent emitting empties;

--- a/css/basic-page-layout.css
+++ b/css/basic-page-layout.css
@@ -23,6 +23,9 @@ h2{
 	font-size:1.4em;
 	margin-bottom:.4em;
 }
+h2 + h2 {
+	margin-top: -0.31em;
+}
 h4{
 	font-size:1.2em;
 	padding:.3em 0 .6em;
