--- a/css/ukeGeeks.music.css
+++ b/css/ukeGeeks.music.css
@@ -98,7 +98,7 @@
 	white-space:pre;
 }
 .ugs-source-wrap pre + h6 {
-	margin-top: 3.5em;
+	margin-top: 2.5em;
 }
 .ie .ugs-source-wrap pre {
 	font-family:Verdana, Arial, Helvetica, sans-serif;
